add homework week10