@@ -22,14 +22,7 @@ public class RpcClientByteBuddy implements RpcClient {
     //Lombok注解-@SneakyThrows: https://www.jianshu.com/p/7d0ed3aef34b
     @SneakyThrows()
     public <T> T create(final Class<T> serviceClass, final String url, final Filter... filters) {
-        return (T) new ByteBuddy().subclass(Object.class)
-                .implement(serviceClass)
-                .intercept(InvocationHandlerAdapter.of(new RpcInvocationJDKHandler(serviceClass, url)))
-                .make()
-                .load(RpcClientByteBuddy.class.getClassLoader())
-                .getLoaded()
-                .getDeclaredConstructor()
-                .newInstance();
+        return (T) new ByteBuddy().subclass(Object.class).implement(serviceClass).intercept(InvocationHandlerAdapter.of(new RpcInvocationJDKHandler(serviceClass, url))).make().load(RpcClientByteBuddy.class.getClassLoader()).getLoaded().getDeclaredConstructor().newInstance();
     }
     
     @Override
